# CdiscotrdBot

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/commands/: all_commands.h  author.h  discord_bot.h  hello.h  high_five.h  ping.h  waifu.h
